--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "2.33.0"
 config = "0.10.1"
 lazy_static = "1.4.0"
 regex = "1.3.6"
 
-[profile.release]
-lto = true
-panic = 'abort'
+[dependencies.clap]
+version = "2.33.0"
+default-features = false
+
+# [profile.release]
+# lto = true
+# panic = 'abort'
